--- a/WordPress/Classes/ViewRelated/Views/List/SnippetTableViewCell.xib
+++ b/WordPress/Classes/ViewRelated/Views/List/SnippetTableViewCell.xib
@@ -4,46 +4,45 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="102" id="KGk-i7-Jjw" customClass="SnippetTableViewCell" customModule="WordPress" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="368" height="87"/>
+        <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" selectionStyle="default" indentationWidth="10" rowHeight="82" id="KGk-i7-Jjw" customClass="SnippetTableViewCell" customModule="WordPress" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="368" height="67"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="368" height="87"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="368" height="67"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oMd-3W-Kni" userLabel="Indicator View">
-                        <rect key="frame" x="6" y="32" width="10" height="10"/>
+                        <rect key="frame" x="6" y="25" width="8" height="8"/>
                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="10" id="aYX-vx-L8K"/>
+                            <constraint firstAttribute="width" constant="8" id="aYX-vx-L8K"/>
                             <constraint firstAttribute="width" secondItem="oMd-3W-Kni" secondAttribute="height" multiplier="1:1" id="asG-Xa-pJ0"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gravatar" translatesAutoresizingMaskIntoConstraints="NO" id="xzK-0R-8Uu" customClass="CircularImageView" customModule="WordPress" customModuleProvider="target">
-                        <rect key="frame" x="22" y="16" width="42" height="42"/>
+                        <rect key="frame" x="20" y="10" width="38" height="38"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="xzK-0R-8Uu" secondAttribute="height" multiplier="1:1" id="Ado-n8-iYw"/>
-                            <constraint firstAttribute="width" constant="42" id="pDd-vr-vBl"/>
+                            <constraint firstAttribute="width" constant="38" id="pDd-vr-vBl"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="lXc-gN-Ufo" userLabel="Label Stack View">
-                        <rect key="frame" x="74" y="16" width="278" height="32"/>
+                        <rect key="frame" x="68" y="10" width="284" height="32"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9EJ-O9-rUs" userLabel="Title Label">
-                                <rect key="frame" x="0.0" y="-4" width="278" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9EJ-O9-rUs" userLabel="Title Label">
+                                <rect key="frame" x="0.0" y="-4" width="284" height="17"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ing-nT-4vc" userLabel="Snippet Label">
-                                <rect key="frame" x="0.0" y="15" width="278" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ing-nT-4vc" userLabel="Snippet Label">
+                                <rect key="frame" x="0.0" y="15" width="284" height="17"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -53,17 +52,17 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="lXc-gN-Ufo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="1bL-GB-rlH"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lXc-gN-Ufo" secondAttribute="bottom" constant="16" id="7wb-hA-Swk"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lXc-gN-Ufo" secondAttribute="bottom" constant="10" id="7wb-hA-Swk"/>
                     <constraint firstAttribute="trailing" secondItem="lXc-gN-Ufo" secondAttribute="trailing" constant="16" id="BFj-Ur-toO"/>
                     <constraint firstItem="xzK-0R-8Uu" firstAttribute="leading" secondItem="oMd-3W-Kni" secondAttribute="trailing" constant="6" id="NYM-He-pS8"/>
                     <constraint firstItem="lXc-gN-Ufo" firstAttribute="leading" secondItem="xzK-0R-8Uu" secondAttribute="trailing" constant="10" id="SRW-jO-i3w"/>
-                    <constraint firstItem="xzK-0R-8Uu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="eNp-7q-Ne0"/>
+                    <constraint firstItem="xzK-0R-8Uu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="eNp-7q-Ne0"/>
                     <constraint firstItem="oMd-3W-Kni" firstAttribute="centerY" secondItem="xzK-0R-8Uu" secondAttribute="centerY" id="i4v-J7-Vvs"/>
+                    <constraint firstItem="lXc-gN-Ufo" firstAttribute="top" secondItem="xzK-0R-8Uu" secondAttribute="top" id="udT-s4-eh8"/>
                     <constraint firstItem="oMd-3W-Kni" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="xjI-GL-V0e"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <inset key="separatorInset" minX="68" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="avatarView" destination="xzK-0R-8Uu" id="BKG-Gh-gh8"/>
                 <outlet property="indicatorView" destination="oMd-3W-Kni" id="aOs-1Z-LAy"/>
@@ -71,7 +70,7 @@
                 <outlet property="snippetLabel" destination="ing-nT-4vc" id="cNe-1x-VBK"/>
                 <outlet property="titleLabel" destination="9EJ-O9-rUs" id="NxI-LZ-cOz"/>
             </connections>
-            <point key="canvasLocation" x="166.66666666666669" y="143.97321428571428"/>
+            <point key="canvasLocation" x="166.66666666666669" y="135.60267857142856"/>
         </tableViewCell>
     </objects>
     <resources>
